@@ -101,8 +101,12 @@ T
 
 #+unix (os:user-info-p (show (os:user-info :default))) T
 #+unix (listp (show (os:user-info) :pretty t)) T
-#+unix (os:group-info-p (show (os:group-info (os:user-info-gid
-                                              (os:user-info :default))))) T
+;; some SF CF hosts (solaris, openbsd) are misconfigured:
+;; user GID is 100, but there is no group with GID 100
+#+unix (os:group-info-p
+        (show
+         (handler-bind ((error (lambda (c) (princ-error c) (use-value 0))))
+           (os:group-info (os:user-info-gid (os:user-info :default)))))) T
 #+unix (listp (show (os:group-info) :pretty t)) T
 #+unix (= (os:getuid) (os:user-info-uid (os:user-info :default))) T
 #+unix (= (os:getgid) (os:user-info-gid (os:user-info :default))) T
